# hornero-event-classifier

./: .gitignore  AGENTS.md  LICENSE  README.md  animate.py  conda_environment.yaml  hec-config.json  main.py  pyproject.toml  validate.py
GUI/: TrialViewer.py  TrialViewer_Lucio.py
docs/source/: conf.py  index.rst
docs/source/api/: classifiers.rst  config.rst  core.rst  index.rst  tools.rst
docs/source/api/classifiers/: base.rst  dependencies.rst  index.rst  metrics.rst  threshold.rst  utils.rst
docs/source/api/core/: data.rst  enums.rst  filters.rst  index.rst  utils.rst
docs/source/usage/: animator.rst  findings.rst  getting_started.rst  index.rst  theory.rst
run/: RunYOLO.py  animate.py  classify.py  config.py  defaults.py  docs.py  gen_metadata_file.py  get_weights.py  paths.py  pipelines.py  utils.py  validate.py  weights.json  weights_old.json
src/hornero_event_classifier/: __init__.py  __main__.py  config.py  pipelines.py
src/hornero_event_classifier/animate/: animate.py  utils.py
src/hornero_event_classifier/classifiers/: __init__.py  base.py  dependencies.py  hdbscan.py  kmean.py  metrics.py  pre_calc.py  threshold.py  utils.py
src/hornero_event_classifier/core/: __init__.py  collections.py  data.py  enums.py  filters.py  scene.py  types.py  utils.py  video_data.py  video_metadata.py
src/hornero_event_classifier/tools/: __init__.py  animate.py  eventval.py  frameval.py  gen_video_metadata.py  plot.py  recommend_weights.py  threshold_tester.py  validate.py  validate_events.py  video.py
