[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hornero_event_classifier"
version = "0.1.0"
description = "Event processing and grading utilities."
requires-python = ">=3.12"
dependencies = [
    "sortedcontainers",
    "numpy", 
    "pandas", 
    "matplotlib", 
    "scikit-learn",
    "ffmpeg-python", 
    "opencv-python",
    "sphinx",
]

# [project.scripts]
# classify = "run.classify"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
# include = ["eventer*"]